--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="ru">
 
 <head>
+
     <meta charset="UTF-8">
     <meta name="description" content="Лучший ресторан итальянской кухни в Петропавловске Камчатском">
     <meta name="keywords" content="Италия, Петропавловск Камчатский, Итальянская кухня, Еда, Ресторан, Заказать стол">
@@ -10,7 +11,8 @@
     <!--стили-->
     <link rel="stylesheet" href="css/main.css">
     <!--    JavaScript-->
-    <script src="https://use.fontawesome.com/67014f6acc.js"></script>
+    <!--   <script src="https://use.fontawesome.com/67014f6acc.js"></script>-->
+
 </head>
 
 <body>
@@ -40,22 +42,21 @@
             <div class="text">Text</div>
         </div>
         <div class="container_slideshow-slides fade">
-            <img src="img/slides/slide1.png" alt="Первый слайд" style="width: 100%">
+            <img src="img/slides/slide2.jpg" alt="Первый слайд" style="width: 100%">
             <div class="text">Text2</div>
         </div>
         <div class="container_slideshow-slides fade">
-            <img src="img/slides/slide1.png" alt="Первый слайд" style="width: 100%">
+            <img src="img/slides/slide3.jpg" alt="Первый слайд" style="width: 100%">
             <div class="text">Text3</div>
         </div>
         <a class="prev" onclick="plusSlides(-1)">&#10094</a>
         <a class="next" onclick="plusSlides(1)">&#10095</a>
-        <div>
+        <div class="slides-dots">
             <span class="dot" onclick="currSlide(1)"></span>
             <span class="dot" onclick="currSlide(2)"></span>
             <span class="dot" onclick="currSlide(3)"></span>
         </div>
     </div>
-
 
     <!--о шефе-->
     <div class="container_about_chief">
@@ -65,6 +66,8 @@
             <a href="#" class="custom_button">О ресторане</a>
         </div>
     </div>
+
 </body>
+<script src="main.js"></script>
 
 </html>
