--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
             <div id="container_header-logo"><img src="img/logo.png" alt=""></div>
             <!--            <div id="mobile_nav_icon"></div>-->
             <div id="container_header-nav">
+<!--<button class="container-menu"></button>-->
                 <ul>
                     <li><a href="#about-restaurant">О ресторане</a></li>
                     <li><a href="#top-page">Акции</a></li>
