add eslint option + comments

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <div id="container_header-logo"><img src="img/logo.png" alt=""></div>
             <!--            <div id="mobile_nav_icon"></div>-->
             <div id="container_header-nav">
-<!--<button class="container-menu"></button>-->
+                <!--<button class="container-menu"></button>-->
                 <ul>
                     <li><a href="#about-restaurant">О ресторане</a></li>
                     <li><a href="#top-page">Акции</a></li>
@@ -106,6 +106,7 @@
                             <div class="container-top_eat-panel__menu_content menu-caption">
                                 <p class="menu-caption_top-caption">Дорадо по-сицилийски</p>
                                 <p class="menu-caption_middle-caption">дорадо, жареная на гриле</p>
+<!--                                здесь и дальше empty div - пустой блок со стандартными отступами-->
                                 <div class="caption-empty-div"></div>
                                 <hr class="pharagraph-line">
                                 <div class="caption-price">
