optimize css js and img

--- a/index.html
+++ b/index.html
@@ -9,17 +9,7 @@
     <!--  <meta name="viewport" content="width=device-width, initial-scale=1">-->
     <meta name="viewport" content="width=device-width, user-scalable=no">
     <title>Resto Porto - лучший ресторан по версии знатоков!</title>
-    <!--стили-->
-    <link rel="stylesheet" href="css/main.css">
-    <!--    JavaScript-->
-    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA0ZHToqOv9FuxWxw86PnhkXqX19CHJQ_4&callback=initMap" type="text/javascript"></script>
-    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-        <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
+
 
 </head>
 
@@ -106,7 +96,7 @@
                             <div class="container-top_eat-panel__menu_content menu-caption">
                                 <p class="menu-caption_top-caption">Дорадо по-сицилийски</p>
                                 <p class="menu-caption_middle-caption">дорадо, жареная на гриле</p>
-<!--                                здесь и дальше empty div - пустой блок со стандартными отступами-->
+                                <!--                                здесь и дальше empty div - пустой блок со стандартными отступами-->
                                 <div class="caption-empty-div"></div>
                                 <hr class="pharagraph-line">
                                 <div class="caption-price">
@@ -225,7 +215,7 @@
 
         <footer>
             <div class="footer-link">
-                <a href="reserv@restoporto.ru"></a>reserv@restoporto.ru</div>
+                <a href="mailto:reserv@restoporto.ru">reserv@restoporto.ru</a></div>
             <div class="social-icons">
                 <div>
                     <a href="#"><img src="img/instagram.png" alt="instagram"></a>
@@ -237,10 +227,22 @@
                     <a href="#"><img src="img/vk.png" alt="vk"></a>
                 </div>
             </div>
-            <div class="footer-link">типовое решение от <a href="">DVIGA</a></div>
+            <div class="footer-link">Make with 💖 by <a href="">Eugene Shalaev</a></div>
         </footer>
     </div>
 </body>
 <script src="main.js"></script>
+<!--стили-->
+<link rel="stylesheet" href="css/main.css">
+<!--    JavaScript-->
+<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA0ZHToqOv9FuxWxw86PnhkXqX19CHJQ_4&callback=initMap" type="text/javascript"></script>
+<!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+<!--[if lt IE 9]>
+        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+        <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
+
 
 </html>
